# mcp-server-odoo

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
dev/: docker-compose.yml
src/mcp_server_odoo/: __init__.py  config.py  odoo_client.py  server.py
src/mcp_server_odoo/tools/: common.py  v16.py
